test/tests/compiler/9_functions/valid/arguments_in_registers/parameter_shadows_own_function.plx
pub fn a(a: i32) i32 {
    return a * 2
}

pub fn main(none) i32 {
    return a(1)
}
