test/tests/compiler/9_functions/invalid_parse/plx1_no_param_list.plx
pub fn foo() i32 {
    return 1
}

pub fn main(none) i32 {
    return 0
}
